--- a/html/style/sass/profile/_profileView.scss
+++ b/html/style/sass/profile/_profileView.scss
@@ -1,15 +1,15 @@
-
-#gallery-list{
-    display: flex;
+#galery-list{
     overflow-x: scroll;
-    max-width: 2000px;
-    height: 500px;
-    flex-shrink: 0;
-    gap: 0px 20px;
 
-    img{
-        width: 150px;
+    border: 3px solid green;
+    padding: 10px;
+    
+    display: flex;
+    gap: 20px;
+    
+    div{
+        min-width: 150px;
         height: 150px;
-        background-color: red;
+        background-color: blue;
     }
 }
